welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: reassignment to val
	if (estFaceMur=false) {
                      ^SlugTracking:6: error: value update is not a member of java.awt.Color
	getCouleurSol()=Color.green	
        ^SlugTracking:11: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		return Color.green;
                             ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (estFaceMur=false) {
        ^