welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	
	if (estFaceMur=false) {
		avance ;
	getCouleurSol()=Color.green	
	
	
	
	
		return Color.green;

}
}        
